--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,7 @@ go:
   - tip
 
 before_install:
-  - sudo apt-get install pkg-config
-  - sudo apt-get install -y libczmq4
+  - sudo apt-get install -y pkg-config libczmq4 libczmq-dev
 
 script:
   - make test
