--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ go:
   - tip
 
 before_install:
-  - sudo apt-get install -y pkg-config libczmq4 libczmq-dev
+  - sudo apt-get install -y pkg-config libczmq4 libczmq-dev libsodium-dev
 
 script:
   - make test
